Fixed Spacing

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -100,7 +100,7 @@ span {
 	position: static;
 	margin: 140px 0% 0% 10%;
 	width: 80%;
-	max-height: 120px;
+	max-height: 220px;
 }
 
 /* Title */
